# psulabss1

./: README.md
lab3/: CMakeLists.txt  lab3t6point1.cxx  main.cpp  main.h  proc13.cxx  proc27.cxx  proc43.cxx  reccur18.cxx  thetri15.cxx
lab4/: CMakeLists.txt  DArray16.cpp  DArray3.cpp  Matrix29.cpp  array_io.cpp  array_io.h  main.cpp  matrix59.cpp
lab5/: CMakeLists.txt  filework.cpp  filework.h  five3.cpp  main.cpp  main.h  str16.cpp  str23.cpp  str28.cpp  str36.cpp  string53.cpp  task6.cpp  task6.h
lab6/: CMakeLists.txt  ExamTaskC1.cpp  T1.cpp  T1.h  main.cpp  main.h  t4.cpp  t4.h
lab7/: CMakeLists.txt  ExamTaskC13.cpp  ExamTaskC13.h  Five13.cpp  main.cpp  main.h  s1.cpp  s1.h
