cmake_minimum_required(VERSION 4.1)
project(labproj5)

set(CMAKE_CXX_STANDARD 20)

add_executable(labproj5 main.cpp
        string53.cpp
        str16.cpp
        str23.cpp
        str36.cpp
        str28.cpp
        five3.cpp
        main.h
        filework.cpp
        filework.h
        task6.cpp
        task6.h)
